# openocd-j-runner

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  README.md  bootstrap  build.ps1  build.sh  configure.ac
.github/workflows/: c-cpp.yml  nightly.yml  release.yml
scripts/: build.sh  clean.sh  deps.sh
scripts/bash/: build.sh  clean.sh  deps.sh
scripts/powershell/: build.ps1  clean.ps1  deps.ps1
src/flash/nor/: Makefile.am
src/helper/: replacements.c
src/jtag/: interfaces.c
src/jtag/drivers/: Makefile.am  dirtyjtag.c
