noinst_LTLIBRARIES += %D%/libocdflashnor.la
%C%_libocdflashnor_la_SOURCES = \
	%D%/core.c \
	%D%/tcl.c \
	$(NOR_DRIVERS) \
	%D%/drivers.c \
	$(NORHEADERS)

NOR_DRIVERS = \
	%D%/aduc702x.c \
	%D%/aducm360.c \
	%D%/ambiqmicro.c \
	%D%/at91sam4.c \
	%D%/at91sam4l.c \
	%D%/at91samd.c \
	%D%/at91sam3.c \
	%D%/at91sam7.c \
	%D%/ath79.c \
	%D%/atsamv.c \
	%D%/atsame5.c \
	%D%/avrf.c \
	%D%/cfi.c \
	%D%/dsp5680xx_flash.c \
	%D%/efm32.c \
	%D%/em357.c \
	%D%/esirisc_flash.c \
	%D%/faux.c \
	%D%/jtagspi.c \
	%D%/lpc2000.c \
	%D%/lpc288x.c \
	%D%/lpc2900.c \
	%D%/lpcspifi.c \
	%D%/mdr.c \
	%D%/mrvlqspi.c \
	%D%/niietcm4.c \
	%D%/non_cfi.c \
	%D%/numicro.c \
	%D%/ocl.c \
	%D%/pic32mx.c \
	%D%/psoc4.c \
	%D%/psoc5lp.c \
	%D%/psoc6.c \
	%D%/renesas_rpchf.c \
	%D%/sfdp.c \
	%D%/sim3x.c \
	%D%/spi.c \
	%D%/stmsmi.c \
	%D%/stellaris.c \
	%D%/str7x.c \
	%D%/str9x.c \
	%D%/str9xpec.c \
	%D%/swm050.c \
	%D%/tms470.c \
	%D%/virtual.c \
	%D%/w600.c \
	%D%/xcf.c \
	%D%/xmc4xxx.c

NORHEADERS = \
	%D%/cfi.h \
	%D%/driver.h \
	%D%/imp.h \
	%D%/non_cfi.h \
	%D%/ocl.h \
	%D%/sfdp.h \
	%D%/spi.h \

